# h-console

./: .gitignore  Makefile  README.md
.github/workflows/: checks-helm.yaml  ci.yaml
agent/: .env.Example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
agent/k8s/deploy/: agent.yml
agent/scripts/: tag-release.sh
agent/src/agent/: NodeCache.py  collector.py  config.py  filter.py  main.py  metrics_pb2.py  metrics_pb2_grpc.py  sender.py  stream_pb2.py  stream_pb2_grpc.py
be/: .env.example  .gitignore  Dockerfile  HELP.md  Makefile  README.md  build.gradle  settings.gradle
be/src/main/resources/: application.properties  application.yml
charts/agent/: Chart.yaml  values.yaml
charts/agent/templates/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  secret.yaml  serviceaccount.yaml
charts/hconsole/: Chart.yaml  values.yaml
charts/hconsole/templates/: _helpers.tpl  redis-deployment.yaml  redis-service.yaml
deploy/gitops/: kustomization.yaml
deploy/gitops/flux/: image-auto.yaml
fe/: .env.example  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
fe/public/legal/: privacy.md  terms.md
fe/src/app/: globals.css  layout.tsx  page.tsx
fe/src/app/_components/: AppInitializer.ts  (+9 more)
gitops/apps/hconsole/: helmrelease.yaml
gitops/flux/: source-agent-chart.yaml  source-infra.yaml
infra/local/: docker-compose.data.yml  docker-compose.redis.yml  redis.conf
operator/: .gitignore  README.md
protos/: metrics.proto  stream.proto
scripts/: tag-release.sh
(+46 files in other folders)
